<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        android:id="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        style="@style/button_main_style" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_2"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        style="@style/button_main_style"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        android:id="@+id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        style="@style/button_main_style"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        android:id="@+id/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        style="@style/button_main_style"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        android:id="@+id/button_5"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        style="@style/button_main_style"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        android:id="@+id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        style="@style/button_main_style"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        android:id="@+id/button_7"
        style="@style/button_main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_equally"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        android:id="@+id/button_8"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintBottom_toTopOf="@+id/button_0"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        android:id="@+id/button_9"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_subtract"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_0"
        android:id="@id/button_0"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_equally"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equally"
        android:id="@+id/button_equally"
        style="@style/button_main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/point"
        android:id="@+id/button_point"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add"
        android:id="@+id/button_add"
        style="@style/button_main_style"
        app:layout_constraintTop_toBottomOf="@id/button_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_point"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/subtract"
        android:id="@+id/button_subtract"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division"
        android:id="@+id/button_division"
        style="@style/button_main_style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiplication"
        android:id="@+id/button_multiplication"
        style="@style/button_main_style"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_subtract"/>
</androidx.constraintlayout.widget.ConstraintLayout>